dons_tests/valid_kxi/indexed_type_check.kxi
void main(){
    int[][][] x = new int[][][10];
    x[0] = new int[][10];
    x[0][1] = new int[10];
    x[0][1][2] = 1;
    int y = x[0][1][2];
}
    int[][][] x = new int[][][10];
    x[0] = new int[][10];
    x[0][1] = new int[10];
    x[0][1][2] = 1;
    int y = x[0][1][2];
}
