dons_tests/invalid_kxi/double_dec_data.kxi
class MyClass { 
  public int x;
  static public char x;
  MyClass(int a, int b) {}
  public int[] myfunc() {}
}
void main(){}
